# paradise

./: CMakeLists.txt  LICENSE  README.md  paradise.c  paradise.h
src/: entry.h  game.c  game.h  game_types.h
src/containers/: darray.c  darray.h
src/core/: application.c  application.h  asserts.h  clock.c  clock.h  event.c  event.h  gmemory.c  gmemory.h  gstring.c  gstring.h  input.c  input.h  logger.c  logger.h
src/math/: gmath.c  gmath.h  math_types.h
src/memory/: linear_allocator.c  linear_allocator.h
src/platform/: platform.h  platform_linux.c  platform_win32.c
src/renderer/: renderer_backend.c  renderer_backend.h  renderer_frontend.c  renderer_frontend.h  renderer_types.inl
src/renderer/vulkan/: vulkan_backend.c  vulkan_backend.h  vulkan_command_buffer.c  vulkan_command_buffer.h  vulkan_device.c  vulkan_device.h  vulkan_fence.c  vulkan_fence.h  vulkan_framebuffer.c  vulkan_framebuffer.h  vulkan_image.c  vulkan_image.h  vulkan_platform.h  vulkan_renderpass.c  vulkan_renderpass.h  vulkan_swapchain.c  vulkan_swapchain.h  vulkan_types.inl  vulkan_utils.c  vulkan_utils.h
